--- a/src/components/flowerCard/flowerCard.css
+++ b/src/components/flowerCard/flowerCard.css
@@ -1,7 +1,7 @@
 .flower-card {
     background: #fff;
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
     border-radius: 2px;
     height: 29%;
     margin: .25rem;
@@ -24,4 +24,43 @@
     padding-left: .25rem;
     padding-right: .25rem;
     font-size: 15px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .flower-card {
+        background: black;
+        max-width: 100%;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .flower-card {
+        background: black;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .flower-card {
+        background: black;
+        max-width: 48.5%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 1024px) {
+    .flower-card {
+        background: black;
+        width: 32.5%;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .flower-card {
+        background: black;
+        max-width: 24.3%;
+    }
 }
